--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,9 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"typeinfo": "cpp"
-	}
+	},
+	"cSpell.words": [
+		"Kadane's",
+		"Subarray"
+	]
 }
