--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
         "unordered_map": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "aaabbbba",
+        "abxcbaz"
+    ]
 }
